# pip

./: CMakeLists.txt  array_pointer  exp2-5.md
final/: J_resultlarge.csv  J_score.md  J_score1  J_score1.c  J_score1.html  J_score1.md  J_score1.txt  J_score1_dynamic  J_score2  J_score2.c  J_score2.html  J_score2.md  J_score3.c  J_score3.html  J_score3.md  J_score3.rtf  J_scorelarge.txt  J_scorelarge1  J_scorelarge1.c  J_scorelarge1.txt  J_scorelarge2  J_scorelarge2.c  J_scorelarge3.c  final.html  final.md  generate copy.py  generate.py  tempCodeRunnerFile.c
final/Report02/: J_result2023.csv  J_score_file.c  J_score_template1.c  J_score_template2.c
final/assets/: calc_score.psd
final/playground/: heapsort  heapsort.c  input  input.c  scanfiles  scanfiles.c  testpointer.c
lec01/: csvplay  csvplay.c  data.csv  helloworld
lec01/lec01_init/: key_input  prog1  (+9 more)
lec02/: exp2-1.html  exp2-1.md  exp2-2.html  exp2-2.md  exp2-3.html  exp2-3.md  exp2-4.html  exp2-4.md  exp2-5.html  exp2-5.md  factorial  factorial.c  fibo1.c  fibo2  fibo2.c  fibo3  fibo3.c  form  form.c  key_input  key_input.c  loop  loop.c  loop01  loop01.c  loop02  loop02.c  printf_format  printf_format.c  sample  sample.c  sample2.c  template.c
lec03/: a.out  abs  array.c  divisor  even_list  even_list.c  matrix_multiple  matrix_multiple.c  operator.c  rank  rank.c  reverse  reverse.c  score  score.c  select_item.c  select_item2.c  string  string.c  string2.c  stringsize.c  stringtest  stringtest.c  sum_up01.c  sum_up02.c
lec04/: cast.c  math_calc  math_calc.c  poly  poly.c  sort_bubble  sort_bubble.c  sort_bubble1  sort_bubble2
lec05/: add_func.c  add_func2  add_func2.c  local_grobal.c  r_factorial.c  sin_wave.c  struct_ex.c
lec06/: callby  callby.c  file_read.c  file_read2.c  file_write2.c  var_address.c  var_pointer
midterm/: midterm.html  midterm.md  original_score  original_score.c  score  score.c  score_sheet  score_sheet.c  tempCodeRunnerFile.c
(+214 files in other folders)
