cmake_minimum_required(VERSION 3.26)
project(pip C)

set(CMAKE_C_STANDARD 11)

add_executable(pip
        lec01/lec01_init/prog1.c
        lec01/lec01_init/prog2.c
        lec01/lec01_init/prog3.c
        lec01/lec01_init/sample.c
        lec01/lec01_init/stringtry.c
        lec01/csvplay.c
        lec01/helloworld.c
        lec02/playground/play.c
        lec02/factorial.c
        lec02/fibo1.c
        lec02/fibo2.c
        lec02/fibo3.c
        lec02/form.c
        lec02/key_input.c
        lec02/loop.c
        lec02/loop01.c
        lec02/loop02.c
        lec02/printf_format.c
        lec02/sample.c
        lec02/sample2.c
        lec02/template.c
        lec03/exercise-answers/ex3-1/abs.c
        lec03/exercise-answers/ex3-1/divisor.c
        lec03/exercise-answers/ex3-1/rank.c
        lec03/exercise-answers/ex3-2/operator.c
        lec03/exercise-answers/ex3-3/even_list.c
        lec03/exercise-answers/ex3-3/even_list_loop.c
        lec03/exercise-answers/ex3-4/array_input.c
        lec03/exercise-answers/ex3-5/reverse.c
        lec03/exercise-answers/ex3-5/stringsize.c
        lec03/exercise-answers/ex3-6/matrix_multiple.c
        lec03/exercise-answers/ex3-6/nestedfor.c
        lec03/array.c
        lec03/matrix_multiple.c
        lec03/score.c
        lec03/select_item.c
        lec03/select_item2.c
        lec03/string.c
        lec03/string2.c
        lec03/stringsize.c
        lec03/sum_up01.c
        lec03/sum_up02.c
        lec04/ex4-1/sort_bubble1.c
        lec04/ex4-2/sort_bubble2.c
        lec04/ex4-3/sort_select.c
        lec04/ex4-4/octave/sinplot.m
        lec04/ex4-4/poly_sin3.c
        lec04/ex4-4/poly_sin5.c
        lec04/ex4-4/polyout3.c
        lec04/ex4-4/polyout5.c
        lec04/cast.c
        lec04/math_calc.c
        lec04/poly.c
        lec04/sort_bubble.c
        midterm/score.c)
